# NUCLEO_G474RE

./: README.md
Apps/Flasher/: ConvertString.cpp  ConvertString.h  Manager.cpp  Manager.h  SRecord.cpp  SRecord.h  SerialCom.cpp  SerialCom.h  test.cpp  test.vcxproj  test.vcxproj.filters
Apps/SerialPort/: CMakeLists.txt  main.cpp
board_features/: .cproject  .gitignore  .project  STM32G474RETX.ld
board_features/Board/: gpio.c  gpio.h  lpuart1.c  lpuart1.h  watchdog.c  watchdog.h
board_features/LL/: cmsis_compiler.h  core_cm4.h  stm32g474xx.h  stm32g4xx.h  stm32g4xx_ll_adc.c  stm32g4xx_ll_adc.h  stm32g4xx_ll_bus.h  stm32g4xx_ll_comp.c  stm32g4xx_ll_comp.h  stm32g4xx_ll_cordic.c  stm32g4xx_ll_cordic.h  stm32g4xx_ll_cortex.h  stm32g4xx_ll_crc.c  stm32g4xx_ll_crc.h  stm32g4xx_ll_crs.c  stm32g4xx_ll_crs.h  stm32g4xx_ll_dac.c  stm32g4xx_ll_dac.h  stm32g4xx_ll_dma.c  stm32g4xx_ll_dma.h  stm32g4xx_ll_dmamux.h  stm32g4xx_ll_exti.c  stm32g4xx_ll_exti.h  stm32g4xx_ll_gpio.c  stm32g4xx_ll_gpio.h  stm32g4xx_ll_hrtim.c  stm32g4xx_ll_hrtim.h  stm32g4xx_ll_i2c.c  stm32g4xx_ll_i2c.h  stm32g4xx_ll_iwdg.h  stm32g4xx_ll_lptim.c  stm32g4xx_ll_lptim.h  stm32g4xx_ll_lpuart.c  stm32g4xx_ll_lpuart.h  stm32g4xx_ll_opamp.c  stm32g4xx_ll_opamp.h  stm32g4xx_ll_pwr.c  stm32g4xx_ll_pwr.h  stm32g4xx_ll_rcc.c  stm32g4xx_ll_rcc.h  (+15 more)
board_features/Src/: Initialize.c  Initialize.h  cli_task.c  cli_task.h  main.c  system.c  system.h
board_features/Utility/: console.c  console.h  stream.c  stream.h
fromScratch/: .cproject  .gitignore  .project  fromScratch Debug.launch
fromScratch/inc/: Initialize.h  system.h
fromScratch/src/: main.c
stm32g474_cmake/: .gitignore  Buildtools.cmake  CMakeLists.txt  Readme.md  STM32G474RETX.ld
stm32g474_cmake/Core/: Initialize.c  main.c  main.h  stm32g4xx_startup.c  syscalls.c  system.c
stm32g474_cmake/Interfaces/: CMakeLists.txt  can.h  crc.c  crc.h  gpio.c  gpio.h  lpuart1.c  lpuart1.h  template.h  usart1.c  usart1.h  watchdog.c  watchdog.h
stm32g474_cmake/LL/: CMakeLists.txt
stm32g474_cmake/Utils/: CMakeLists.txt
stm32g474_cmake/src/: Initialize.c  main.c  system.c
stm32g474_cmake/stm32_ll/: CMakeLists.txt  stm32g4xx_ll_rcc.h
stm32g474ret_rtos_cmake/: Buildtools.cmake  CMakeLists.txt  Readme.md  STM32G474RETX.ld
stm32g474ret_rtos_cmake/Core/: common.c  main.c  system.c  task_host.c  task_main.c  task_monitor.c
stm32g474ret_rtos_cmake/Core/include/: Initialize.h  system.h  task_config.h  task_host.h  task_main.h  task_monitor.h
stm32g474ret_rtos_cmake/FreeRTOS-Kernel/: CMakeLists.txt
stm32g474ret_rtos_cmake/FreeRTOS-Kernel/include/: FreeRTOSConfig.h
stm32g474ret_rtos_cmake/Interfaces/: CMakeLists.txt  can.c  lpuart1.c  usart1.c  watchdog.c
stm32g474ret_rtos_cmake/Interfaces/include/: can.h  lpuart1.h  template.h  usart1.h  watchdog.h
stm32g474ret_rtos_cmake/Interfaces/source/: crc.c  lpuart1.c  usart1.c
stm32g474ret_rtos_cmake/Utils/: CMakeLists.txt  convert_to_string.c  stream.c
stm32g474ret_rtos_cmake/Utils/include/: convert_to_string.h  stream.h
stm32g474ret_rtos_cmake/Utils/source/: convert_to_string.c
stm32g474ret_rtos_cmake/stm32_ll/: CMakeLists.txt
